# PDCurses

./: .travis.yml  CMakeLists.txt  appveyor.yml  azure-pipelines.yml
cmake/: build_dependencies.cmake  build_options.cmake  project_common.cmake  watcom_open_dos32_toolchain.cmake  watcom_open_os2v2_toolchain.cmake
ncurses/: CMakeLists.txt
sdl2/: CMakeLists.txt
wincon/: CMakeLists.txt
wingui/: CMakeLists.txt
x11/: CMakeLists.txt  config.h  x11.c
